18Nov99=======================================================================
1. Added ping obs counter together with Time::HiRes timers. This will dis-
connect nodes that fail to respond to 3 ping requests (on the 4th attempt). 
The default time is a ping every 3 mins, therefore a link will be struck out
after 12 minutes of nil response.
17Nov99=======================================================================
1. Started using Data::Dumper for things again
2. 'Fixed' DXUser file corruption?
3. Allow multiline (ie lines with \n in them) output in $DXChannel::send 
4. Added Andrew K9CW's updated wpxloc.raw, regenerated prefix_data.pl
5. Put in callsign matching and stuff into sh/sun.
14Nov99=======================================================================
1. added BBS.pm to start BBS input of mail
2. fixed eval in DXUser to log errors rather than banging out
12Nov99=======================================================================
1. added sh/sun command kindly supplied by Steve K9AN.
2. allow ^Z on its own on a line to terminate a message
08Nov99=======================================================================
1. added spoofing (mk1 version) for sysops, useful for those little jobs like
reseting a user's qra locator and such like "spoof g7brn set/qra jo02lq".
2. fixed set/location so it stores the qra locator in the qra locator slot, 
NOT the lat/long (who wrote this stuff...?).
07Nov99=======================================================================
1. reduced the amount of stuff compared against for dup announces.
2. Check the regex for DK0WCY announces produces results before storing it as
a WWV.
3. Added some logging for set/priv (un)set/lockout.
4. Added test long path calc to sh/muf
5. Only wonder down the msg queue every minute
6. Put in the initial DB code (at last), you can create and remove local and
standard remote dbs, you can import AK1A style .FUL ascii databases, you can
enquire on a local or remote database.