@@ -8,6 +8,7 @@ my $lccall = lc $call;
 return (1, $self->msg('e5')) if $self->priv < 5;
 return (1, $self->msg('e6')) unless $call gt ' ';
 return (1, $self->msg('already', $call)) if DXChannel->get($call);
+return (1, $self->msg('outconn', $call)) if grep {$_->{call} eq $call} @main::outstanding_connects;
 return (1, $self->msg('conscript', $lccall)) unless -e "$main::root/connect/$lccall";
 
 my $prog = "$main::root/local/client.pl";
@@ -27,6 +28,7 @@ if (defined $pid) {
 		exec $prog, $call, 'connect';
 	} else {
 		sleep(1);    # do a coordination
+		push @main::outstanding_connects, {call => $call, pid => $pid};
 		return(1, $self->msg('constart', $call));
 	}
 }
